# TEChess

./: CMakeLists.txt  README.md
chess/: main.cpp
lib/: chess.hpp  chessboard.cpp  chesspiece.cpp  chesspieces.hpp  generator.hpp
test/: chesspieces.cpp  pos.cpp  util.hpp
